# brig

./: .gitignore  CHANGELOG.rst  Makefile  README.rst  TESTING.rst  pyproject.toml
.github/workflows/: main.yml
apis/: README.rst
functions/: README.rst
functions/4dn-status/: README.rst  requirements.txt
functions/4dn-status/data/: README.rst  aws_event_sample.rst  events.SAMPLE.json  events.json
functions/4dn-status/scripts/: test
functions/4dn-status/source/: lambda_function.py
functions/4dn-status/src/: lambda_function.py  lambda_function_tests.py  qa_utils_subset.py  test_lambda_function.py
scripts/: brig-build  brig-test  brig-unit-test-all  build-zip
