[tool.poetry]
name = "brig"
version = "0.5.0"
description = "A psuedo-library wrapper for debugging lambda functionality."
authors = ["4DN-DCIC Team <support@4dnucleome.org>"]
license = "MIT"
keywords = ["brig"]
readme = "README.rst"
homepage = "https://github.com/4dn-dcic/brig"
repository = "https://github.com/4dn-dcic/brig"
packages = [ ]
classifiers = [
  'Development Status :: 4 - Beta',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: MIT License',
  'Natural Language :: English',
  'Programming Language :: Python :: 3.6',
]
include = [
  # The history file is unreferenced and empty. -kmp 12-Mar-2020
  # "HISTORY.rst",
  "LICENSE",
]

[tool.poetry.dependencies]
# This environment is used only for debugging and should include the union of all libraries used anywhere
# in this envronment (which may be tricky to arrange in some cases), but should give PyCharm something to
# use. For more reliable pre-deploy testing, use the brig-test script from within an individual function or
# api folder. -kmp 5-Nov-2020
python = ">=3.6.1,<3.10"
dcicutils = ">= 3.9.0"
python-dateutil = ">=2.8.2"
pytz = ">=2021.3"
requests = ">=2.27.1"

[tool.poetry.dev-dependencies]
pytest = ">=7.0.0"
# pytest-cov isn't needed because we don't do coverage tests in this repo
# pytest-cov = ">=3.0.0"
# pygments is only needed by PyCharm to render the README
pygments = ">=2.11.2"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
